# openvmm

./: .flowey.toml  .gitignore  CONTRIBUTE.MD  Cargo.toml  README.md  SUPPORT.md  clippy.toml  shell.nix
flowey/flowey_lib_hvlite/: Cargo.toml
flowey/flowey_lib_hvlite/src/: build_and_test_vmgs_lib.rs  build_guide.rs  build_nextest_unit_tests.rs  build_nextest_vmm_tests.rs  build_openhcl_boot.rs  build_openhcl_igvm_from_recipe.rs  build_openhcl_initrd.rs  build_openvmm.rs  build_openvmm_hcl.rs  build_rustdoc.rs  build_sidecar.rs  build_tmk_vmm.rs  cfg_rustup_version.rs  download_openvmm_vmm_tests_artifacts.rs  download_release_igvm_files_from_gh.rs  init_cross_build.rs  init_openvmm_magicpath_linux_test_kernel.rs  init_openvmm_magicpath_openhcl_sysroot.rs  init_openvmm_magicpath_openvmm_deps.rs  init_openvmm_magicpath_protoc.rs  init_openvmm_magicpath_virtio_win.rs  init_vmm_tests_env.rs  install_git_credential_manager.rs  install_vmm_tests_deps.rs  lib.rs  resolve_openhcl_kernel_package.rs  resolve_openvmm_deps.rs  resolve_openvmm_test_initrd.rs  resolve_openvmm_test_linux_kernel.rs  resolve_openvmm_test_virtio_win.rs  run_igvmfilegen.rs  run_prep_steps.rs  run_split_debug_info.rs  run_test_igvm_agent_rpc_server.rs  stop_test_igvm_agent_rpc_server.rs  test_nextest_unit_tests_archive.rs  test_nextest_vmm_tests_archive.rs
flowey/flowey_lib_hvlite/src/_jobs/: build_and_publish_openhcl_igvm_from_recipe.rs  build_and_publish_openvmm_hcl_baseline.rs  build_and_run_doc_tests.rs  build_and_run_nextest_unit_tests.rs  build_test_results_website.rs  cfg_common.rs  cfg_versions.rs  check_clippy.rs  check_openvmm_hcl_size.rs  check_xtask_fmt.rs  consolidate_and_publish_gh_pages.rs  consume_and_test_nextest_vmm_tests_archive.rs  local_build_and_run_nextest_vmm_tests.rs  local_build_igvm.rs  local_check_cca_emu_prereq.rs  local_install_cca_emu.rs  local_restore_packages.rs  local_run_cca_test.rs  local_update_cca_emu.rs  mod.rs  test_local_flowey_build_igvm.rs
openhcl/build_info/: Cargo.toml  build.rs
openhcl/build_info/src/: lib.rs
openhcl/openhcl_boot/: Cargo.toml
openhcl/openhcl_boot/src/: boot_logger.rs  cmdline.rs  dt.rs  hypercall.rs  main.rs  memory.rs  rt.rs  sidecar.rs
openhcl/openhcl_boot/src/arch/aarch64/: entry.S  memory.rs  mod.rs
openhcl/openhcl_boot/src/arch/x86_64/: address_space.rs  memory.rs  mod.rs  snp.rs  tdx.rs
openhcl/openhcl_boot/src/host_params/: mmio.rs  mod.rs  shim_params.rs
openhcl/openhcl_boot/src/host_params/dt/: bump_alloc.rs  dma_hint.rs  mod.rs
openvmm/openvmm/: Cargo.toml  build.rs  resources.rc
openvmm/openvmm/src/: main.rs
openvmm/openvmm_entry/: Cargo.toml
openvmm/openvmm_entry/src/: cli_args.rs  lib.rs  meshworker.rs  pidfile.rs  repl.rs  serial_io.rs  storage_builder.rs  tracing_init.rs  vm_controller.rs
openvmm/openvmm_entry/src/ttrpc/: mod.rs
support/crypto/: Cargo.toml  build.rs
support/crypto/src/: hashes.rs  lib.rs  mac.rs  win.rs
support/crypto/src/aes_256_gcm/: win.rs
support/crypto/src/aes_kwp/: kwp.rs  mac.rs  mod.rs  ossl.rs  rust.rs  symcrypt.rs  win.rs
support/crypto/src/kbkdf/: mod.rs  ossl.rs  symcrypt.rs
support/crypto/src/pkcs7/: mac.rs  mod.rs  ossl.rs  symcrypt_rust.rs  win.rs
support/crypto/src/rsa/: mac.rs  mod.rs  ossl.rs  rust.rs  symcrypt.rs  win.rs
support/crypto/src/sha_256/: mac.rs  mod.rs  win.rs
support/crypto/src/x509/: builder.rs  mac.rs  mod.rs  ossl.rs  symcrypt_rust.rs  win.rs
support/crypto/src/xts_aes_256/: mod.rs  ossl.rs  symcrypt.rs  win.rs
support/hvs_file/: Cargo.toml  FORMAT.md
support/hvs_file/src/: defs.rs  lib.rs  reader.rs  writer.rs
support/term/: Cargo.toml
support/term/src/: lib.rs
vm/devices/cxl/: Cargo.toml
vm/devices/cxl/src/: lib.rs  spec.rs
vm/devices/cxl/src/component_registers/: hdm_cap.rs  mod.rs  registers.rs  spec.rs  test_helper.rs
vm/devices/cxl/src/pci_registers/: cxl_device_dvsec.rs  cxl_port_dvsec.rs  flex_bus_port_dvsec.rs  mod.rs  register_locator_dvsec.rs  spec.rs
vm/devices/cxl/src/test/: cxl_test_device.rs  mod.rs
vm/devices/firmware/firmware_uefi/: Cargo.toml
vm/devices/firmware/firmware_uefi/fuzz/: Cargo.toml  fuzz_diagnostics.rs  fuzz_nvram.rs
vm/devices/firmware/firmware_uefi/src/: lib.rs  resolver.rs
vm/devices/firmware/firmware_uefi_resources/: Cargo.toml
vm/devices/firmware/firmware_uefi_resources/src/: lib.rs
vm/devices/get/test_igvm_agent_lib/: Cargo.toml
vm/devices/get/test_igvm_agent_lib/src/: lib.rs  test_crypto.rs
vm/devices/get/test_igvm_agent_rpc_server/: Cargo.toml  build.rs
vm/devices/get/test_igvm_agent_rpc_server/idl/: IGVmAgentRpcApi.idl
vm/devices/get/test_igvm_agent_rpc_server/src/: main.rs
vm/devices/iommu/amd_iommu/: Cargo.toml
vm/devices/iommu/amd_iommu/src/: lib.rs
vm/devices/iommu/smmu/: Cargo.toml
vm/devices/iommu/smmu/src/: emulator.rs  lib.rs  shared.rs  translate.rs
vm/devices/net/net_consomme/consomme/: Cargo.toml  build.rs
vm/devices/pci/pci_resource_assignment/: Cargo.toml
vm/devices/pci/pci_resource_assignment/src/: assign.rs  lib.rs  (+2 more)
vm/devices/pci/vfio_assigned_device/: Cargo.toml
vm/loader/page_table/: Cargo.toml
vm/loader/page_table/src/: aarch64.rs  lib.rs  x64.rs
vm/loader/paravisor_measured_config/: Cargo.toml
vm/loader/paravisor_measured_config/src/: lib.rs
vm/loader/paravisor_measured_cwcow/: Cargo.toml
vm/loader/paravisor_measured_cwcow/src/: lib.rs
vmm_core/hyperv_dump/: Cargo.toml
vmm_core/hyperv_dump/src/: defs.rs  lib.rs  partition_state.rs  vmrs_writer.rs
vmm_core/hyperv_dump/tests/: cross_validate.rs
vmm_tests/vmm_test_igvm_agent/: Cargo.toml  README.md
vmm_tests/vmm_test_igvm_agent/src/: lib.rs
workers/chipset_device_worker/: Cargo.toml
workers/chipset_device_worker/src/: guestmem.rs  lib.rs  protocol.rs  proxy.rs  resolver.rs  worker.rs
workers/chipset_device_worker/src/worker/: configure.rs
workers/vnc_worker/vnc/: Cargo.toml
workers/vnc_worker/vnc/examples/: vncserver.rs
workers/vnc_worker/vnc/src/: dirty_bitmap.rs  encoder.rs  error.rs  lib.rs  pixel.rs  scancode.rs  server.rs  traits.rs  update_state.rs
(+803 files in other folders)
