# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "build_info"
edition.workspace = true
rust-version.workspace = true

[dependencies]
inspect.workspace = true

[build-dependencies]
hostname.workspace = true
time.workspace = true
vergen = { workspace = true, features = ["git", "gitcl"] }
xshell.workspace = true

[lints]
workspace = true
