# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "openhcl_boot"
edition.workspace = true
rust-version.workspace = true

[features]
cvm_boot_log = []

[dependencies]
aarch64defs.workspace = true
bitfield-struct.workspace = true
minimal_rt.workspace = true
underhill_confidentiality.workspace = true
host_fdt_parser.workspace = true
loader_defs.workspace = true
igvm_defs.workspace = true
hvdef.workspace = true
fdt.workspace = true
memory_range.workspace = true
sidecar_defs.workspace = true
string_page_buf.workspace = true
mesh_protobuf.workspace = true

arrayvec.workspace = true
cfg-if.workspace = true
crc32fast.workspace = true
log.workspace = true
thiserror.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
page_table.workspace = true
safe_intrinsics.workspace = true
sha2.workspace = true
static_assertions.workspace = true
tdcall.workspace = true
x86defs.workspace = true

[dev-dependencies]
test_with_tracing.workspace = true
tracing.workspace = true

[build-dependencies]
minimal_rt_build.workspace = true

[lints]
workspace = true
