# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "openvmm"
edition.workspace = true
rust-version.workspace = true

[features]
default = [
  "gdb",
  "virt_hvf",
  "virt_kvm",
  "virt_mshv",
  "virt_whp",
  "net_consomme",
  "net_tap",
  "disk_blob",
  "disklayer_sqlite",
]

# see the `openvmm_entry` crate for more info on these features
gdb = ["openvmm_resources/gdb"]
vendored_crypto = ["crypto/vendored"]
tpm = ["openvmm_resources/tpm"]
virt_hvf = ["openvmm_resources/virt_hvf", "openvmm_hypervisors/virt_hvf"]
virt_kvm = ["openvmm_resources/virt_kvm", "openvmm_hypervisors/virt_kvm"]
virt_mshv = ["openvmm_resources/virt_mshv", "openvmm_hypervisors/virt_mshv"]
virt_whp = ["openvmm_resources/virt_whp", "openvmm_hypervisors/virt_whp"]

net_consomme = ["openvmm_resources/net_consomme"]
net_tap = ["openvmm_resources/net_tap"]

disk_blob = ["openvmm_resources/disk_blob"]
disk_crypt = ["openvmm_resources/disk_crypt"]
disklayer_sqlite = ["openvmm_resources/disklayer_sqlite"]

[dependencies]
openvmm_entry.workspace = true
openvmm_hypervisors.workspace = true
openvmm_resources.workspace = true
crypto = { workspace = true, features = ["native"] }

[build-dependencies]
embed-resource.workspace = true

[lints]
workspace = true
