# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "hvs_file"
edition.workspace = true
rust-version.workspace = true

[dependencies]
crc32fast.workspace = true
open_enum.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
zerocopy.workspace = true

[dev-dependencies]

[lints]
workspace = true
