# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "term"
edition.workspace = true
rust-version.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
  "Win32_Globalization",
  "Win32_System_Console",
]

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[lints]
workspace = true
