# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cxl_spec"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bitfield-struct.workspace = true
chipset_device.workspace = true
inspect.workspace = true
mesh.workspace = true
pci_resources.workspace = true
pci_core.workspace = true
thiserror.workspace = true
vm_resource.workspace = true
tracing.workspace = true
vmcore.workspace = true

[lints]
workspace = true
