# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "page_table"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitfield-struct.workspace = true
thiserror.workspace = true
static_assertions.workspace = true
tracing = { workspace = true, optional = true }
zerocopy.workspace = true

[features]
tracing = ["dep:tracing", "std"]
std = []

[lints]
workspace = true
