# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "vnc"
edition.workspace = true
rust-version.workspace = true

[dependencies]
pal_async.workspace = true
video_core.workspace = true

async-channel.workspace = true
bitvec = { workspace = true, features = ["std"] }
flate2.workspace = true
futures.workspace = true
thiserror.workspace = true
tracelimit.workspace = true
tracing.workspace = true
zerocopy.workspace = true
socket2 = { workspace = true, features = [ "all" ] }

[dev-dependencies]
parking_lot.workspace = true

[lints]
workspace = true
