# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "firmware_uefi"
edition.workspace = true
rust-version.workspace = true

[features]
# exposes private modules so that they can be fuzzed
fuzzing = []

[dependencies]
firmware_uefi_custom_vars.workspace = true
firmware_uefi_resources.workspace = true
hcl_compat_uefi_nvram_storage = { workspace = true, features = ["inspect", "save_restore"] }
uefi_nvram_storage = { workspace = true, features = ["inspect", "save_restore"] }
uefi_specs.workspace = true
uefi_nvram_specvars.workspace = true
generation_id.workspace = true
watchdog_core.workspace = true

chipset_device.workspace = true
chipset_device_resources.workspace = true
chipset_resources.workspace = true
guestmem.workspace = true
vm_resource.workspace = true
vmcore.workspace = true
vmm_core.workspace = true

async-trait.workspace = true
bitfield-struct.workspace = true
crypto.workspace = true
der = { workspace = true, features = ["derive", "alloc", "oid"] }
getrandom.workspace = true
guid.workspace = true
inspect.workspace = true
jiff.workspace = true
local_clock.workspace = true
mesh.workspace = true
open_enum.workspace = true
pal_async.workspace = true
thiserror.workspace = true
tracelimit.workspace = true
tracing.workspace = true
ucs2.workspace = true
zerocopy.workspace = true

[dev-dependencies]
test_with_tracing.workspace = true
wchar.workspace = true

[lints]
workspace = true
