# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "smmu"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bitfield-struct.workspace = true
chipset_device.workspace = true
guestmem.workspace = true
iommu_common.workspace = true
inspect.workspace = true
mesh.workspace = true
open_enum.workspace = true
pal_event.workspace = true
parking_lot.workspace = true
pci_core.workspace = true
thiserror.workspace = true
tracelimit.workspace = true
vmcore.workspace = true
zerocopy.workspace = true

[dev-dependencies]
pal_async.workspace = true

[lints]
workspace = true
