# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "pci_resource_assignment"
edition.workspace = true
rust-version.workspace = true

[dependencies]
memory_range.workspace = true
pci_core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pal_async.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
