# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "consomme"
edition.workspace = true
rust-version.workspace = true

[dependencies]
mesh_channel_core.workspace = true
futures.workspace = true
getrandom.workspace = true
heapless.workspace = true
parking_lot.workspace = true
smoltcp = { workspace = true, features = [ "proto-ipv4", "proto-ipv6", "proto-dns", "medium-ethernet", "socket-raw", "std", "proto-dhcpv4" ] }
socket2.workspace = true
thiserror.workspace = true
tracing.workspace = true
zerocopy.workspace = true

inspect.workspace = true
inspect_counters.workspace = true
open_enum.workspace = true
pal_async.workspace = true
tracelimit.workspace = true

[target.'cfg(unix)'.dependencies]
blocking.workspace = true
cfg-if.workspace = true
libc.workspace = true
resolv-conf.workspace = true

[target.'cfg(windows)'.dependencies]
pal.workspace = true
slab.workspace = true
winapi.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_IO", "Win32_NetworkManagement_Dns", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_System_LibraryLoader"] }

[lints]
workspace = true
